--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="/style.css">
+  <link rel="stylesheet" href="style.css">
   <title>Frontend Mentor | 3-column preview card component</title>
 </head>
 <body>
   <div class="container">
     <div class="block">
       <div class="sedans">
-        <img src="images/icon-sedans.svg" alt="sedan icon" class="sedan-icon">
+        <img src="images/icon-sedans.svg" alt="sedan icon" class="sedan-icon car">
         <h2>
           Sedans
         </h2>
@@ -26,7 +26,7 @@
       </div>
 
       <div class="SUV">
-        <img src="images/icon-suvs.svg" alt="suv icon" class="suv-icon">
+        <img src="images/icon-suvs.svg" alt="suv icon" class="suv-icon car">
         <h2>
           SUVs
         </h2>
@@ -40,7 +40,7 @@
       </div>
 
       <div class="Luxury">
-        <img src="images/icon-luxury.svg" alt="luxury icon" class="luxury-icon">
+        <img src="images/icon-luxury.svg" alt="luxury icon" class="luxury-icon car">
         <h2>
           Luxury
         </h2>
